<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:civ_border_color="#FF909090"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUserLoginTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:text="@string/userLoginTitle"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUserLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:text="@string/userLogin"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textUserLoginTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/textUserLoginTitle" />


    <TextView
        android:id="@+id/textUserNameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:text="@string/userTypeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textUserLoginTitle" />

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:text="@string/userType"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textUserNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/textUserNameTitle"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@android:color/black"
        app:layout_constraintGuide_begin="102dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@android:color/black"
        app:layout_constraintGuide_begin="205dp" />
</androidx.constraintlayout.widget.ConstraintLayout>