<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/textNameTitle"
        android:textSize="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/img_user_avatar" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="11dp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/textNameTitle"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@id/textNameTitle" />

    <TextView
        android:id="@+id/textEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/textEmailTitle"
        android:textSize="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@id/textName"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@id/textName" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text=""
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textEmailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textEmailTitle"
        app:layout_constraintTop_toTopOf="@id/textEmailTitle" />

    <TextView
        android:id="@+id/textLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textLocationTitle"
        android:textSize="10dp"
        app:layout_constraintEnd_toStartOf="@+id/textLocation"
        app:layout_constraintTop_toBottomOf="@id/textNameTitle" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textLocationTitle"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@id/textLocationTitle" />

    <TextView
        android:id="@+id/textCompanyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/textCompanyTitle"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@id/textLocation"
        app:layout_constraintStart_toStartOf="@+id/textEmailTitle"
        app:layout_constraintTop_toTopOf="@id/textLocation"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textCompany"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="10dp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@id/textCompanyTitle"
        app:layout_constraintStart_toEndOf="@+id/textCompanyTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textCompanyTitle" />

    <TextView
        android:id="@+id/textFollowerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/textFollower"
        app:layout_constraintTop_toBottomOf="@id/textLocationTitle"
        android:text="@string/textFollowerTitle" />

    <TextView
        android:id="@+id/textFollower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="11dp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/textFollowerTitle"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@id/textFollowerTitle" />

    <TextView
        android:id="@+id/textFollowingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/textFollowingTitle"
        android:textSize="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@id/textFollower"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@id/textFollower" />

    <TextView
        android:id="@+id/textFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="10dp"
        android:textStyle="bold"
        android:layout_marginStart="11dp"
        app:layout_constraintBottom_toBottomOf="@id/textFollowingTitle"
        app:layout_constraintStart_toEndOf="@+id/textFollowingTitle"
        app:layout_constraintTop_toTopOf="@id/textFollowingTitle" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textFollowerTitle">
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@android:color/black"
        app:layout_constraintGuide_percent="0.5" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>